# C-Dynamic-Strings

./: .gitignore  CMakeLists.txt  README.md
include/: dynamic_strings.h
include/dynamic_strings/: string.h  string_access.h  string_buffer.h  string_creation.h  string_operation.h  string_utils.h
src/: dynamic_strings.c
src/dynamic_strings/: string_access.c  string_buffer.c  string_creation.c  string_operation.c  string_utils.c
